--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,25 +115,33 @@ jobs:
       # This does not make your image faster to download, just provides better resumability and fixes a few errors.
       # Documentation for Rechunk is provided on their github repository at https://github.com/hhd-dev/rechunk
       # You can enable it by uncommenting the following lines:
-      # - name: Run Rechunker
-      #   id: rechunk
-      #   uses: hhd-dev/rechunk@f153348d8100c1f504dec435460a0d7baf11a9d2 # v1.1.1
-      #   with:
-      #     rechunk: 'ghcr.io/hhd-dev/rechunk:v1.0.1'
-      #     ref: "localhost/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}"
-      #     prev-ref: "${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}"
-      #     skip_compression: true
-      #     version: ${{ env.CENTOS_VERSION }}
-      #     labels: ${{ steps.metadata.outputs.labels }} # Rechunk strips out all the labels during build, this needs to be reapplied here with newline separator
+      # NOTE: rechunker has been updated to v.1.2.3 I don't know what updating rechunker actually entails...
+       - name: Run Rechunker
+         id: rechunk
+         uses: hhd-dev/rechunk@ded27feba22df48134eece2c66ba0fca1289ff40 # v1.2.3 # updated since ublue doesn't update rechunker on their template
+         with:
+           rechunk: 'ghcr.io/hhd-dev/rechunk:v1.2.3' # update from v1.0.1
+           ref: "localhost/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}"
+           prev-ref: "${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}"
+           skip_compression: true # may play with this at some point
+           version: '${{ steps.generate-version.outputs.tag }}' # modify this may break
+           labels: ${{ steps.metadata.outputs.labels }}
+            org.opencontainers.image.created=<timestamp>
+            org.opencontainers.image.description=universal-blue's species and my preferences
+            org.opencontainers.image.licenses=Apache-2.0
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.source=https://github.com/phantomcortex/distinction-ublue-internal
+            org.opencontainers.image.title=DistinctionOS
+            # Rechunk strips out all the labels during build, this needs to be reapplied here with newline separator
 
       # This is necessary so that the podman socket can find the rechunked image on its storage
-      # - name: Load in podman and tag
-      #   run: |
-      #     IMAGE=$(podman pull ${{ steps.rechunk.outputs.ref }})
-      #     sudo rm -rf ${{ steps.rechunk.outputs.output }}
-      #     for tag in ${{ steps.metadata.outputs.tags }}; do
-      #       podman tag $IMAGE ${{ env.IMAGE_NAME }}:$tag
-      #     done
+       - name: Load in podman and tag
+         run: |
+           IMAGE=$(podman pull ${{ steps.rechunk.outputs.ref }})
+           sudo rm -rf ${{ steps.rechunk.outputs.output }}
+           for tag in ${{ steps.metadata.outputs.tags }}; do
+             podman tag $IMAGE ${{ env.IMAGE_NAME }}:$tag
+           done
 
       # These `if` statements are so that pull requests for your custom images do not make it publish any packages under your name without you knowing
       # They also check if the runner is on the default branch so that things like the merge queue (if you enable it), are going to work
