brave extension fill:1

--- a/system_files/etc/opt/brave/policies/managed/extensions_policy.json
+++ b/system_files/etc/opt/brave/policies/managed/extensions_policy.json
@@ -2,6 +2,12 @@
   "ExtensionInstallForcelist": [
     "eimadpbcbfnmbkopoojfekhnkhdbieeh;https://clients2.google.com/service/update2/crx",
     "cjpalhdlnbpafiamejdnhcphjbkeiagm;https://clients2.google.com/service/update2/crx",
-    "gebbhagfogifgggkldgodflihgfeippi;https://clients2.google.com/service/update2/crx"
+    "gebbhagfogifgggkldgodflihgfeippi;https://clients2.google.com/service/update2/crx",
+    "mnjggcdmjocbbbhaepdhchncahnbgone;https://clients2.google.com/service/update2/crx",
+    "jcflnmpjkgiagljbphhomfgplmhhodpn;https://clients2.google.com/service/update2/crx",
+    "ponfpcnoihfmfllpaingbgckeeldkhle;https://clients2.google.com/service/update2/crx",
+    "emdkdnnopdnajipoapepbeeiemahbjcn;https://clients2.google.com/service/update2/crx",
+    "ghmbeldphafepmbegfdlkpapadhbakde;https://clients2.google.com/service/update2/crx",
+    "paponcgjfojgemddooebbgniglhkajkj;https://clients2.google.com/service/update2/crx"
   ]
 }
