--- a/system_files/etc/opt/brave/policies/managed/extensions_policy.json
+++ b/system_files/etc/opt/brave/policies/managed/extensions_policy.json
@@ -8,6 +8,7 @@
     "ponfpcnoihfmfllpaingbgckeeldkhle;https://clients2.google.com/service/update2/crx",
     "emdkdnnopdnajipoapepbeeiemahbjcn;https://clients2.google.com/service/update2/crx",
     "ghmbeldphafepmbegfdlkpapadhbakde;https://clients2.google.com/service/update2/crx",
-    "paponcgjfojgemddooebbgniglhkajkj;https://clients2.google.com/service/update2/crx"
+    "paponcgjfojgemddooebbgniglhkajkj;https://clients2.google.com/service/update2/crx",
+    "neebplgakaahbhdphmkckjjcegoiijjo;https://clients2.google.com/service/update2/crx"
   ]
 }
