--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: Run Rechunker
         id: rechunk
-        uses: hhd-dev/rechunk@ca77507401f8700bb0b25ebecbbf980a078cd180 # v1.2.2
+        uses: hhd-dev/rechunk@ded27feba22df48134eece2c66ba0fca1289ff40 # v1.2.3
         with:
           rechunk: "ghcr.io/hhd-dev/rechunk:v1.2.2"
           ref: "localhost/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}"
@@ -132,18 +132,23 @@ jobs:
           skip_compression: false
           max-layers: 100
           labels: ${{ steps.metadata.outputs.labels }} # Rechunk strips out all the labels during build, this needs to be reapplied here with newline separator
+
       - name: Rechunk output
         run: |
-          if [[ "${{ steps.rechunk.conclusion }}" == "success" ]]; then
-            echo "${{ steps.rechunk.outputs.changelog }}"
-            echo "${{ steps.rechunk.outputs.manifest }}"
-            cat "${{ steps.rechunk.outputs.changelog }}"
-            cat "${{ steps.rechunk.outputs.manifest }}"
+          if [[ "${STEPS_RECHUNK_CONCLUSION}" == "success" ]]; then
+            echo "${STEPS_RECHUNK_OUTPUTS_CHANGELOG}"
+            echo "${STEPS_RECHUNK_OUTPUTS_MANIFEST}"
+            cat "${STEPS_RECHUNK_OUTPUTS_CHANGELOG}"
+            cat "${STEPS_RECHUNK_OUTPUTS_MANIFEST}"
 
           else
             echo "Rechunk conclusion:"
-            echo "${{ steps.rechunk.conclusion }}"
+            echo "${STEPS_RECHUNK_CONCLUSION}"
           fi
+        env:
+          STEPS_RECHUNK_CONCLUSION: ${{ steps.rechunk.conclusion }}
+          STEPS_RECHUNK_OUTPUTS_CHANGELOG: ${{ steps.rechunk.outputs.changelog }}
+          STEPS_RECHUNK_OUTPUTS_MANIFEST: ${{ steps.rechunk.outputs.manifest }}
 
       - name: Remove Rechunker image
         run: |
@@ -156,11 +161,16 @@ jobs:
 
       - name: Load in podman and tag
         run: |
-          IMAGE=$(podman pull ${{ steps.rechunk.outputs.ref }})
-          sudo rm -rf ${{ steps.rechunk.outputs.location }}
-          for tag in ${{ steps.metadata.outputs.tags }}; do
-            podman tag $IMAGE ${{ env.IMAGE_NAME }}:$tag
+          IMAGE=$(podman pull ${STEPS_RECHUNK_OUTPUTS_REF})
+          sudo rm -rf ${STEPS_RECHUNK_OUTPUTS_LOCATION}
+          for tag in ${STEPS_METADATA_OUTPUTS_TAGS}; do
+            podman tag $IMAGE ${IMAGE_NAME}:$tag
           done
+        env:
+          STEPS_RECHUNK_OUTPUTS_REF: ${{ steps.rechunk.outputs.ref }}
+          STEPS_RECHUNK_OUTPUTS_LOCATION: ${{ steps.rechunk.outputs.location }}
+          STEPS_METADATA_OUTPUTS_TAGS: ${{ steps.metadata.outputs.tags }}
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@184bdaa0721073962dff0199f1fb9940f07167d1 # v3
@@ -199,7 +209,7 @@ jobs:
       # using Cosign and save the private key as a repository secret in Github for this workflow
       # to consume. For more details, review the image signing section of the README.
       - name: Install Cosign
-        uses: sigstore/cosign-installer@d7543c93d881b35a8faa02e8e3605f69b7a1ce62 # v3.10.0
+        uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
         if: github.event_name != 'pull_request' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
 
       - name: Sign container image
