--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 ---
-name: Build DistinctionOS
+name: Build DistinctionOS-rechunker
 on:
   pull_request:
     branches:
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_DESC: "Bazzite but even better"
+  IMAGE_DESC: "Bazzite but with custom modifications"
   IMAGE_KEYWORDS: "bootc,ublue,universal-blue"
   IMAGE_LOGO_URL: "https://avatars.githubusercontent.com/u/120078124?s=200&v=4" 
   IMAGE_NAME: "${{ github.event.repository.name }}"  # output image name, usually same as repo name
