--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,28 +6,27 @@ on:
       - main
   schedule:
     - cron: '05 8 */4 * *'  # 2:05am Mountain time every 4 days
-  #push:
-  #  branches:
-  #    - main
-  #  paths-ignore:
-  #    - '.github/**'
-  #    - '**/README.md'
-  #    - '**/claude.md'
-  #    - 'repo_files/**'
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+      - '**/README.md'
+      - '**/claude.md'
+      - 'repo_files/**'
   workflow_dispatch:
 
 env:
   IMAGE_DESC: "Bazzite but with custom modifications"
   IMAGE_KEYWORDS: "bootc,ublue,universal-blue"
   IMAGE_LOGO_URL: "https://avatars.githubusercontent.com/u/120078124?s=200&v=4" 
-  IMAGE_NAME: "${{ github.event.repository.name }}"  # output image name, usually same as repo name
-  IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"  # do not edit
-  DEFAULT_TAG: "rechunker-stable"
+  IMAGE_NAME: "${{ github.event.repository.name }}"
+  IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"
+  DEFAULT_TAG: "stable"  # Changed from "rechunker-stable" for clarity
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-${{ inputs.brand_name}}-${{ inputs.stream_name }}
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
-
 
 jobs:
   build_push:
@@ -40,33 +39,23 @@ jobs:
       id-token: write
 
     steps:
-
-      # 'Maximize build space' is here because the build stage returns an error: 'read/write on closed pipe'. This error disappears when 'Maximize build space' is active
-      - name: Maximize build space
-        uses: ublue-os/remove-unwanted-software@517622d6452028f266b7ba4cc9a123b5f58a6b53 # v7   
-        
-     # These stage versions are pinned by https://github.com/renovatebot/renovate
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4
-          
-	  # Prepare runner
+        uses: actions/checkout@v4
+
+      - name: Maximize build space
+        uses: ublue-os/remove-unwanted-software@v7
+
       - name: Prepare environment
         run: |
-          # Lowercase the image uri
-          # This is here because the build stage returns an error: 'repository name must be lowercase'
           echo "IMAGE_REGISTRY=${IMAGE_REGISTRY,,}" >> ${GITHUB_ENV}
           echo "IMAGE_NAME=${IMAGE_NAME,,}" >> ${GITHUB_ENV}
-
-      # These stage versions are pinned by https://github.com/renovatebot/renovate
-      - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4
-
+          
       - name: Get current date
         id: date
         run: |
           echo "date=$(date -u +%Y\-%m\-%d\T%H\:%M\:%S\Z)" >> $GITHUB_OUTPUT
 
-	  - name: Generate tags
+      - name: Generate tags
         id: generate-tags
         shell: bash
         run: |
@@ -94,6 +83,7 @@ jobs:
           done
 
           echo "tags=${BUILD_TAGS[*]}" >> $GITHUB_OUTPUT
+
       - name: Image Metadata
         uses: docker/metadata-action@v5
         id: metadata
@@ -109,7 +99,7 @@ jobs:
             org.opencontainers.image.url=https://github.com/${{ github.repository }}
             io.artifacthub.package.keywords=${{ env.IMAGE_KEYWORDS }}
             io.artifacthub.package.logo-url=${{ env.IMAGE_LOGO_URL }}
-	
+
       - name: Build image (rootful)
         id: build_image
         run: |
@@ -131,8 +121,6 @@ jobs:
             echo "No images to remove."
           fi
 
-
-
       - name: Run Rechunker
         id: rechunk
         uses: hhd-dev/rechunk@v1.2.3
@@ -141,7 +129,7 @@ jobs:
           ref: "localhost/${{ env.IMAGE_NAME }}:build"
           prev-ref: "${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}"
           skip_compression: false
-          max-layers: 80
+          max-layers: 100
           labels: ${{ steps.metadata.outputs.labels }}
 
       - name: Load in podman and tag
@@ -160,13 +148,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lowercase Registry
-        id: registry_case
-        uses: ASzc/change-string-case-action@v6
-        with:
-          string: ${{ env.IMAGE_REGISTRY }}
-
-- name: Push To GHCR
+      - name: Push To GHCR
         if: github.event_name != 'pull_request'
         run: |
           for tag in ${{ steps.generate-tags.outputs.tags }}; do
@@ -176,7 +158,6 @@ jobs:
               --format v2s2 \
               ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}
           done
-
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3
@@ -194,9 +175,3 @@ jobs:
             cosign sign -y --key env://COSIGN_PRIVATE_KEY \
               ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}
           done
-
-      - name: Create changelog annotation
-        id: changelog
-        run: |
-          CHANGELOG=$(.github/workflows/changelog.py distinctionos -)
-          echo "$CHANGELOG" >> $GITHUB_STEP_SUMMARY
