--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ env:
   IMAGE_LOGO_URL: "https://avatars.githubusercontent.com/u/120078124?s=200&v=4" 
   IMAGE_NAME: "${{ github.event.repository.name }}"
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"
-  DEFAULT_TAG: "stable"  # Changed from "rechunker-stable" for clarity
+  DEFAULT_TAG: "testing"  # Changed from "rechunker-stable" for clarity
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
@@ -74,7 +74,7 @@ jobs:
           else
               BUILD_TAGS+=("${DEFAULT_TAG}")
               BUILD_TAGS+=("${DEFAULT_TAG}-${TIMESTAMP}")
-              BUILD_TAGS+=("latest")
+              BUILD_TAGS+=("testing")
           fi
 
           echo "Generated the following build tags: "
@@ -149,15 +149,18 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push To GHCR
-        if: github.event_name != 'pull_request'
-        run: |
-          for tag in ${{ steps.generate-tags.outputs.tags }}; do
-            echo "Pushing ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}"
-            sudo podman push \
-              --compress \
-              --format v2s2 \
-              ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}
-          done
+        uses: redhat-actions/push-to-registry@5ed88d269cf581ea9ef6dd6806d01562096bee9c # v2
+        if: github.event_name != 'pull_request' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+        id: push
+        env:
+          REGISTRY_USER: ${{ github.actor }}
+          REGISTRY_PASSWORD: ${{ github.token }}
+        with:
+          registry: ${{ env.IMAGE_REGISTRY }}
+          image: ${{ env.IMAGE_NAME }}
+          tags: ${{ steps.metadata.outputs.tags }}
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASSWORD }}
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3
